# Contract-Risk-Analysis-BN-LLM

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  contract-review-v2-p0.md  docker-compose.yml  pyproject.toml  test.json  启动.txt  技术架构文档.md
.claude/: settings.json  settings.local.json  test_upload.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  main.py
backend/routers/: dual.py  export.py  feedback.py  history.py  misc.py  redlines.py  review.py  sandbox.py  upload.py
config/: bayesian_network.json  bayesian_network_v2.json  civil_code_reference.md  clause_type_mapping.yaml  company_redlines.yaml  contract_type_parameters.yaml  contract_type_routing.yaml  evidence_mapping.json  legal_reference_from_disc_law_sft.txt  missing_clause_priority.yaml  node_schema_v1.json  party_aware_rules.yaml  pending_nodes.json
dataset/ALeaseBert/: annotations-legend.json  sample.html  sample.json
dataset/CUAD/: README.md  metafile.yaml
dataset/ContractNLI/: contract-nli.py
docs/: golden-cli-usage.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
sample_data/: benchmark_baseline_comparison.json  benchmark_contractnli_bn.json  benchmark_cuad.json  ceramic_tile_contract.txt  llm_prompt.txt  llm_prompt_no_bn.txt  nda_text_example.txt  session_results_2026-05-20.json
scripts/: add_ledgar_edges.py  add_ledgar_nodes.py  apply_ledgar_calibration.py  build_legal_reference.py  ledgar_bn_mapping.py  ledgar_cpt_calibrate.py  update_bn_config.py  validate_bn_coverage.py
worklist/: PROGRESS.md  WORKLIST.md
合同检测报告/: AI网页检测.md  contract-review-BN.md  deepseek网页评价.md  v2_report_output.md  v2_test_output.json  煤炭购销合同对比AI网页评价.md  销售合同对比AI网页评价.md
方向/: 合同类型分层路由与BN节点子集提取方案.md  合同类型智能路由与公司红线方案.md  技术方案文档.md  技术架构_案例_成本.md  报告稳定性优先与架构演进方案.md  项目多维度量化评估报告.md
(+747 files in other folders)
