[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bn-contract-risk-analysis"
version = "0.1.0"
description = "Bayesian-network contract risk analysis demo scaffold"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.76",
  "python-dotenv>=1.0",
  "streamlit>=1.44",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pgmpy>=1.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
