[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bn-contract-risk-analysis"
version = "0.1.0"
description = "Bayesian-network contract risk analysis demo scaffold"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.76",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pgmpy>=0.1.28",
  "markdown>=3.4",
  "fpdf2>=2.8",
  "pymysql>=1.1",
  "PyPDF2>=3.0",
  "python-docx>=1.0",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "networkx>=3.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "datasets>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
